Scrollview to make things responsive

--- a/CarMeets Android App/app/src/main/res/layout/fragment_account.xml
+++ b/CarMeets Android App/app/src/main/res/layout/fragment_account.xml
@@ -38,110 +38,114 @@
                 app:layout_constraintGuide_percent="0.9"
         />
 
-        <!-- Titel -->
-        <TextView
-                android:id="@+id/txt_account_title"
-                android:layout_width="wrap_content"
+        <ScrollView
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-
-                android:text="@string/txt_hello"
-                android:textSize="30sp"
-                android:textColor="@color/colorPrimary"
-                android:textStyle="bold"
-
-                app:layout_constraintStart_toStartOf="@id/guideline_account_10percent_vertical"
-                app:layout_constraintEnd_toEndOf="@id/guideline_account_90percent_vertical"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@+id/txt_account_username"
-
-                android:layout_marginBottom="8dp"
-
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintVertical_chainStyle="packed"
-        />
-
-        <!-- Gebruikersnaam -->
-        <TextView
-                android:id="@+id/txt_account_username"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:text="@{accountViewModel.username}"
-                tools:text="Lennert"
-                android:textSize="30sp"
-                android:textColor="@color/colorPrimary"
-                android:textStyle="bold"
-
-                app:layout_constraintStart_toStartOf="@id/guideline_account_10percent_vertical"
-                app:layout_constraintEnd_toEndOf="@id/guideline_account_90percent_vertical"
-                app:layout_constraintTop_toBottomOf="@+id/txt_account_title"
-                app:layout_constraintBottom_toTopOf="@+id/btn_account_manage_account"
-
-                android:layout_marginTop="8dp"
-
-                app:layout_constraintHorizontal_bias="0.5"
-        />
-
-        <!-- Account instellingen -->
-        <Button
-                android:id="@+id/btn_account_manage_account"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-
-                android:textColor="@android:color/black"
-                android:text="@string/txt_manage_account"
-                android:background="@color/lightGrey"
-
-                app:layout_constraintStart_toStartOf="@id/guideline_account_10percent_vertical"
-                app:layout_constraintEnd_toEndOf="@id/guideline_account_90percent_vertical"
-                app:layout_constraintTop_toBottomOf="@+id/txt_account_username"
-                app:layout_constraintBottom_toTopOf="@+id/btn_account_preferences"
-
-                android:layout_marginTop="16dp"
-
-                app:layout_constraintHorizontal_bias="0.5"
-        />
-
-        <!-- Voorkeuren -->
-        <Button
-                android:id="@+id/btn_account_preferences"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-
-                android:textColor="@android:color/black"
-                android:text="@string/txt_preferences"
-                android:background="@color/lightGrey"
-
-                app:layout_constraintStart_toStartOf="@id/guideline_account_10percent_vertical"
-                app:layout_constraintEnd_toEndOf="@id/guideline_account_90percent_vertical"
-                app:layout_constraintTop_toBottomOf="@+id/btn_account_manage_account"
-                app:layout_constraintBottom_toTopOf="@+id/btn_account_logout"
-
-                android:layout_marginTop="16dp"
-
-                app:layout_constraintHorizontal_bias="0.5"
-        />
-
-        <!-- Afmelden -->
-        <Button
-                android:id="@+id/btn_account_logout"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-
-                android:textColor="#000"
-                android:text="@string/btn_account_logoff"
-                android:background="@color/lightGrey"
-
-                app:layout_constraintStart_toStartOf="@id/guideline_account_10percent_vertical"
-                app:layout_constraintEnd_toEndOf="@id/guideline_account_90percent_vertical"
-                app:layout_constraintTop_toBottomOf="@+id/btn_account_preferences"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="@id/guideline_account_10percent_vertical"
+                app:layout_constraintEnd_toEndOf="@id/guideline_account_90percent_vertical"
+        >
 
-                android:layout_marginTop="16dp"
+            <android.support.constraint.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
-                app:layout_constraintHorizontal_bias="0.5"
-        />
+                <!-- Titel -->
+                <TextView
+                        android:id="@+id/txt_account_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
 
+                        android:text="@string/txt_hello"
+                        android:textSize="30sp"
+                        android:textColor="@color/colorPrimary"
+                        android:textStyle="bold"
+
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toTopOf="@+id/txt_account_username"
+
+                        android:layout_marginBottom="8dp"
+                />
+
+                <!-- Gebruikersnaam -->
+                <TextView
+                        android:id="@+id/txt_account_username"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:text="@{accountViewModel.username}"
+                        tools:text="Lennert"
+                        android:textSize="30sp"
+                        android:textColor="@color/colorPrimary"
+                        android:textStyle="bold"
+
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/txt_account_title"
+                        app:layout_constraintBottom_toTopOf="@+id/btn_account_manage_account"
+
+                        android:layout_marginTop="8dp"
+                />
+
+                <!-- Account instellingen -->
+                <Button
+                        android:id="@+id/btn_account_manage_account"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+
+                        android:textColor="@android:color/black"
+                        android:text="@string/txt_manage_account"
+                        android:background="@color/lightGrey"
+
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/txt_account_username"
+                        app:layout_constraintBottom_toTopOf="@+id/btn_account_preferences"
+
+                        android:layout_marginTop="16dp"
+                />
+
+                <!-- Voorkeuren -->
+                <Button
+                        android:id="@+id/btn_account_preferences"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+
+                        android:textColor="@android:color/black"
+                        android:text="@string/txt_preferences"
+                        android:background="@color/lightGrey"
+
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/btn_account_manage_account"
+                        app:layout_constraintBottom_toTopOf="@+id/btn_account_logout"
+
+                        android:layout_marginTop="16dp"
+                />
+
+                <!-- Afmelden -->
+                <Button
+                        android:id="@+id/btn_account_logout"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+
+                        android:textColor="#000"
+                        android:text="@string/btn_account_logoff"
+                        android:background="@color/lightGrey"
+
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/btn_account_preferences"
+                        app:layout_constraintBottom_toBottomOf="parent"
+
+                        android:layout_marginTop="16dp"
+                />
+
+            </android.support.constraint.ConstraintLayout>
+        </ScrollView>
     </android.support.constraint.ConstraintLayout>
 
 </layout>
