--- a/CarMeets Android App/app/src/main/res/layout/fragment_manage_account.xml
+++ b/CarMeets Android App/app/src/main/res/layout/fragment_manage_account.xml
@@ -27,86 +27,87 @@
             app:layout_constraintGuide_percent="0.9"
     />
 
-    <!-- Titel -->
-    <TextView
-            android:id="@+id/txt_manage_account_title"
-            android:layout_width="wrap_content"
+    <ScrollView
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-
-            android:text="@string/txt_manage_account"
-            android:textSize="30sp"
-            android:textColor="@color/colorPrimary"
-            android:textStyle="bold"
-
-            app:layout_constraintStart_toStartOf="@id/guideline_manage_account_10percent_vertical"
-            app:layout_constraintEnd_toEndOf="@id/guideline_manage_account_90percent_vertical"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/btn_manage_account_change_password"
-
-            android:layout_marginBottom="8dp"
-
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintVertical_chainStyle="packed"
-    />
-
-    <!-- Wachtwoord wijzigen -->
-    <Button
-            android:id="@+id/btn_manage_account_change_password"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-
-            android:textColor="@android:color/black"
-            android:text="@string/txt_change_password"
-            android:background="@color/lightGrey"
-
-            app:layout_constraintStart_toStartOf="@id/guideline_manage_account_10percent_vertical"
-            app:layout_constraintEnd_toEndOf="@id/guideline_manage_account_90percent_vertical"
-            app:layout_constraintTop_toBottomOf="@+id/txt_manage_account_title"
-            app:layout_constraintBottom_toTopOf="@+id/btn_manage_account_change_username"
-
-            android:layout_marginTop="16dp"
-
-            app:layout_constraintHorizontal_bias="0.5"
-    />
-
-    <!-- Gebruikersnaam wijzigen -->
-    <Button
-            android:id="@+id/btn_manage_account_change_username"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-
-            android:textColor="@android:color/black"
-            android:text="@string/txt_change_username"
-            android:background="@color/lightGrey"
-
-            app:layout_constraintStart_toStartOf="@id/guideline_manage_account_10percent_vertical"
-            app:layout_constraintEnd_toEndOf="@id/guideline_manage_account_90percent_vertical"
-            app:layout_constraintTop_toBottomOf="@+id/btn_manage_account_change_password"
-            app:layout_constraintBottom_toTopOf="@+id/btn_manage_account_change_email"
-
-            android:layout_marginTop="16dp"
-
-            app:layout_constraintHorizontal_bias="0.5"
-    />
-
-    <!-- E-mailadres wijzigen -->
-    <Button
-            android:id="@+id/btn_manage_account_change_email"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-
-            android:textColor="#000"
-            android:text="@string/txt_change_email"
-            android:background="@color/lightGrey"
-
-            app:layout_constraintStart_toStartOf="@id/guideline_manage_account_10percent_vertical"
-            app:layout_constraintEnd_toEndOf="@id/guideline_manage_account_90percent_vertical"
-            app:layout_constraintTop_toBottomOf="@+id/btn_manage_account_change_username"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@id/guideline_manage_account_10percent_vertical"
+            app:layout_constraintEnd_toEndOf="@id/guideline_manage_account_90percent_vertical"
+    >
 
-            android:layout_marginTop="16dp"
+        <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            app:layout_constraintHorizontal_bias="0.5"
-    />
+            <!-- Titel -->
+            <TextView
+                    android:id="@+id/txt_manage_account_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
 
+                    android:text="@string/txt_manage_account"
+                    android:textSize="30sp"
+                    android:textColor="@color/colorPrimary"
+                    android:textStyle="bold"
+
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+
+                    android:layout_marginBottom="8dp"
+            />
+
+            <!-- Wachtwoord wijzigen -->
+            <Button
+                    android:id="@+id/btn_manage_account_change_password"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+
+                    android:textColor="@android:color/black"
+                    android:text="@string/txt_change_password"
+                    android:background="@color/lightGrey"
+
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/txt_manage_account_title"
+
+                    android:layout_marginTop="16dp"
+            />
+
+            <!-- Gebruikersnaam wijzigen -->
+            <Button
+                    android:id="@+id/btn_manage_account_change_username"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+
+                    android:textColor="@android:color/black"
+                    android:text="@string/txt_change_username"
+                    android:background="@color/lightGrey"
+
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/btn_manage_account_change_password"
+
+                    android:layout_marginTop="16dp"
+            />
+
+            <!-- E-mailadres wijzigen -->
+            <Button
+                    android:id="@+id/btn_manage_account_change_email"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+
+                    android:textColor="#000"
+                    android:text="@string/txt_change_email"
+                    android:background="@color/lightGrey"
+
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/btn_manage_account_change_username"
+
+                    android:layout_marginTop="16dp"
+            />
+        </android.support.constraint.ConstraintLayout>
+    </ScrollView>
 </android.support.constraint.ConstraintLayout>
