Optie voor tonen cached items + databinding remastered

--- a/CarMeets Android App/app/src/main/res/layout/fragment_meetingdetail.xml
+++ b/CarMeets Android App/app/src/main/res/layout/fragment_meetingdetail.xml
@@ -62,7 +62,7 @@
                     android:layout_height="wrap_content"
 
                     android:src="@drawable/ic_heart_black_24dp"
-                    android:tint="@{safeUnbox(meetingViewModel.selectedMeeting.isUserLiked)? @color/colorPrimary : @android:color/black}"
+                    android:isToggledOn="@{safeUnbox(meetingViewModel.selectedMeeting.isUserLiked)}"
 
                     app:layout_constraintStart_toStartOf="parent"
 
@@ -75,7 +75,7 @@
                     android:layout_height="wrap_content"
 
                     android:src="@drawable/ic_check_black_24dp"
-                    android:tint="@{safeUnbox(meetingViewModel.selectedMeeting.isUserGoing)? @color/colorPrimary : @android:color/black}"
+                    android:isToggledOn="@{safeUnbox(meetingViewModel.selectedMeeting.isUserGoing)}"
 
                     app:layout_constraintEnd_toEndOf="parent"
 
@@ -273,7 +273,7 @@
                         android:drawableEnd="@drawable/ic_link_pink_18dp"
                         android:text="@string/btn_meeting_website"
 
-                        android:visibility='@{TextUtils.isEmpty(meetingViewModel.selectedMeeting.website) ? View.GONE : View.VISIBLE}'
+                        android:visibility='@{!TextUtils.isEmpty(meetingViewModel.selectedMeeting.website)}'
 
                         app:layout_constraintTop_toBottomOf="@+id/button_meetingdetail_route"
                         app:layout_constraintEnd_toEndOf="parent"
