--- a/CarMeets Android App/app/src/main/res/layout/activity_main.xml
+++ b/CarMeets Android App/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,10 @@
         <variable
                 name="guiViewModel"
                 type="com.lennertbontinck.carmeetsandroidapp.viewmodels.GuiViewModel"/>
+
+        <variable
+                name="meetingViewModel"
+                type="com.lennertbontinck.carmeetsandroidapp.viewmodels.MeetingViewModel"/>
     </data>
 
 
@@ -31,6 +35,9 @@
                 app:theme="@style/ToolbarTheme"
                 app:titleTextAppearance="@style/ToolbarTheme.ToolbarTextAppearance.Title"
                 app:subtitleTextAppearance="@style/ToolbarTheme.ToolbarTextAppearance.Subtitle"
+
+                android:visibility='@{!meetingViewModel.isShowRoomItemsVisible}'
+                tools:visibility="visible"
 
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -57,11 +64,27 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
 
+                android:visibility='@{!meetingViewModel.isShowRoomItemsVisible}'
+                tools:visibility="visible"
+
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
 
                 app:menu="@menu/menu_bottom_navigation"/>
+
+        <include
+                layout="@layout/partial_error_with_show_cache"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+
+                app:isVisible="@{meetingViewModel.isShowRoomItemsVisible}"
+                tools:visibility="gone"
+
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
 
     </android.support.constraint.ConstraintLayout>
