--- a/CarMeets Android App/app/src/main/res/layout-w600dp/fragment_account.xml
+++ b/CarMeets Android App/app/src/main/res/layout-w600dp/fragment_account.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Fragment voor het tonen van account opties -->
+<!-- Fragment voor het tonen van account opties (twopane) -->
 <layout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -18,24 +18,33 @@
             android:layout_height="match_parent"
     >
 
-        <!-- Virtual divider vertical 10% -->
+        <!-- virtuele scheidingslijn verticaal 50% -->
+        <android.support.constraint.Guideline
+                android:id="@+id/guide_account_50percent_vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.5"/>
+
+        <!-- virtuele scheidingslijn verticaal 5% -->
         <android.support.constraint.Guideline
                 android:id="@+id/guideline_account_5percent_vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
                 android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.1"
+                app:layout_constraintGuide_percent="0.05"
         />
 
-        <!-- Virtual divider vertical 90% -->
+        <!-- virtuele scheidingslijn verticaal 45% -->
         <android.support.constraint.Guideline
-                android:id="@+id/guideline_account_90percent_vertical"
+                android:id="@+id/guideline_account_45percent_vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
                 android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.9"
+                app:layout_constraintGuide_percent="0.45"
         />
 
         <ScrollView
@@ -44,7 +53,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@id/guideline_account_5percent_vertical"
-                app:layout_constraintEnd_toEndOf="@id/guideline_account_90percent_vertical"
+                app:layout_constraintEnd_toEndOf="@id/guideline_account_45percent_vertical"
         >
 
             <android.support.constraint.ConstraintLayout
@@ -146,6 +155,34 @@
 
             </android.support.constraint.ConstraintLayout>
         </ScrollView>
+
+        <!-- visuele scheidingslijn -->
+        <View
+                android:id="@+id/divider_account_50percent"
+                android:layout_width="2dp"
+                android:layout_height="0dp"
+                android:background="@android:color/darker_gray"
+
+                app:layout_constraintEnd_toStartOf="@+id/guide_account_50percent_vertical"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"/>
+
+        <!-- detail container -->
+        <FrameLayout
+                android:id="@+id/frame_account_two_pane_container"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/guide_account_50percent_vertical"
+
+                android:layout_marginStart="8dp"/>
+
     </android.support.constraint.ConstraintLayout>
 
 </layout>
