Padding voor visueel aantrekkelijker maken fragments

--- a/CarMeets Android App/app/src/main/res/layout/fragment_placeholder_logo.xml
+++ b/CarMeets Android App/app/src/main/res/layout/fragment_placeholder_logo.xml
@@ -80,6 +80,8 @@
             android:text="@string/txt_about_carmeets"
             android:textSize="15sp"
             android:textAlignment="center"
+
+            android:paddingBottom="10dp"
     />
     </ScrollView>
 
