--- a/CarMeets Android App/app/src/main/res/layout/fragment_preferences.xml
+++ b/CarMeets Android App/app/src/main/res/layout/fragment_preferences.xml
@@ -30,6 +30,7 @@
     <ScrollView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@id/guideline_preferences_10percent_vertical"
@@ -38,7 +39,10 @@
 
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+
+                android:paddingBottom="10dp"
+        >
 
 
             <!-- Titel -->
