--- a/CarMeets Android App/app/src/main/res/layout-land/fragment_meetingdetail.xml
+++ b/CarMeets Android App/app/src/main/res/layout-land/fragment_meetingdetail.xml
@@ -22,7 +22,11 @@
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+
+                android:orientation="vertical"
+
+                android:paddingBottom="10dp"
+        >
 
             <!-- De meeting afbeelding -->
             <ImageView
