--- a/CarMeets Android App/app/src/main/res/layout-w600dp/fragment_account.xml
+++ b/CarMeets Android App/app/src/main/res/layout-w600dp/fragment_account.xml
@@ -50,6 +50,7 @@
         <ScrollView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@id/guideline_account_5percent_vertical"
@@ -58,7 +59,10 @@
 
             <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+
+                    android:paddingBottom="10dp"
+            >
 
                 <!-- Titel -->
                 <TextView
