--- a/CarMeets Android App/app/src/main/res/layout/fragment_register.xml
+++ b/CarMeets Android App/app/src/main/res/layout/fragment_register.xml
@@ -60,6 +60,7 @@
     <ScrollView
             android:layout_width="0dp"
             android:layout_height="0dp"
+
             app:layout_constraintEnd_toStartOf="@+id/guideline_register_90percent_vertical"
             app:layout_constraintStart_toStartOf="@+id/guideline_register_10percent_vertical"
             app:layout_constraintTop_toBottomOf="@id/guideline_register_50percent_horizontal"
@@ -69,6 +70,8 @@
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+
+                android:paddingBottom="10dp"
         >
 
             <!-- Virtual divider vertical 50% -->
