--- a/CarMeets Android App/app/src/main/res/layout/activity_main.xml
+++ b/CarMeets Android App/app/src/main/res/layout/activity_main.xml
@@ -59,6 +59,8 @@
                 app:layout_constraintTop_toBottomOf="@id/menu_main_toolbar"
                 app:layout_constraintBottom_toTopOf="@id/menu_main_bottomnavigation"/>
 
+
+
         <android.support.design.widget.BottomNavigationView
                 android:id="@+id/menu_main_bottomnavigation"
                 android:layout_width="0dp"
@@ -79,6 +81,19 @@
                 android:layout_height="0dp"
 
                 app:isVisible='@{safeUnbox(meetingViewModel.isShowRoomItemsVisible)}'
+                tools:visibility="gone"
+
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+        <include
+                layout="@layout/partial_loading"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+
+                android:visibility="gone"
                 tools:visibility="gone"
 
                 app:layout_constraintStart_toStartOf="parent"
