klein gui fixje -> error fragment ipv loading fragment

--- a/CarMeets Android App/app/src/main/res/layout/activity_main.xml
+++ b/CarMeets Android App/app/src/main/res/layout/activity_main.xml
@@ -87,7 +87,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
 
-                app:isVisible='@{safeUnbox(meetingViewModel.isErrorPageWithRoomOptionVisible) || safeUnbox(accountViewModel.isLoadingPageVisible)}'
+                app:isVisible='@{safeUnbox(meetingViewModel.isErrorPageWithRoomOptionVisible)}'
                 tools:visibility="gone"
 
                 app:layout_constraintStart_toStartOf="parent"
@@ -100,7 +100,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
 
-                app:isVisible='@{safeUnbox(meetingViewModel.isLoadingPageVisible)}'
+                app:isVisible='@{safeUnbox(meetingViewModel.isLoadingPageVisible) || safeUnbox(accountViewModel.isLoadingPageVisible)}'
                 tools:visibility="gone"
 
                 app:layout_constraintStart_toStartOf="parent"
