--- a/CarMeets Android App/app/src/main/res/layout/partial_empty_list.xml
+++ b/CarMeets Android App/app/src/main/res/layout/partial_empty_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Partial voor aan te geven dat de app iets aan het laden is -->
+<!-- Partial voor aan te geven dat de huidige omgeving een lege lijst is -->
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
@@ -14,7 +14,6 @@
 
     <android.support.constraint.ConstraintLayout
             xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:visibility="@{isVisible}"
@@ -22,7 +21,7 @@
 
         <!-- Virtual divider horizontal 50% -->
         <android.support.constraint.Guideline
-                android:id="@+id/guideline_partial_loading_with_show_cache_50percent_horizontal"
+                android:id="@+id/guideline_partial_empty_list_with_show_cache_50percent_horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
@@ -32,7 +31,7 @@
 
         <!-- Virtual divider vertical 10% -->
         <android.support.constraint.Guideline
-                android:id="@+id/guideline_partial_loading_with_show_cache_10percent_vertical"
+                android:id="@+id/guideline_partial_empty_list_with_show_cache_10percent_vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
@@ -42,7 +41,7 @@
 
         <!-- Virtual divider vertical 90% -->
         <android.support.constraint.Guideline
-                android:id="@+id/guideline_partial_loading_with_show_cache_90percent_vertical"
+                android:id="@+id/guideline_partial_empty_list_with_show_cache_90percent_vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
@@ -52,30 +51,29 @@
 
         <!-- Logo -->
         <ImageView
-                android:id="@+id/img_partial_loading"
+                android:id="@+id/img_partial_empty_list_with_show_cache_logo"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
 
                 app:layout_constraintDimensionRatio="WH,1:1"
                 android:scaleType="fitCenter"
-                android:src="@{`loading_animation_carmeets_3e157a5f-56dc-4017-85ce-ee679d3e0967`}"
-                tools:src="@drawable/loading"
+                android:src="@drawable/logo"
                 android:tint="@color/colorPrimary"
                 android:contentDescription="@string/alt_logo"
 
-                app:layout_constraintEnd_toStartOf="@+id/guideline_partial_loading_with_show_cache_90percent_vertical"
-                app:layout_constraintStart_toStartOf="@+id/guideline_partial_loading_with_show_cache_10percent_vertical"
+                app:layout_constraintEnd_toStartOf="@+id/guideline_partial_empty_list_with_show_cache_90percent_vertical"
+                app:layout_constraintStart_toStartOf="@+id/guideline_partial_empty_list_with_show_cache_10percent_vertical"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@+id/guideline_partial_loading_with_show_cache_50percent_horizontal"
+                app:layout_constraintBottom_toTopOf="@+id/guideline_partial_empty_list_with_show_cache_50percent_horizontal"
         />
 
         <ScrollView
                 android:layout_width="0dp"
                 android:layout_height="0dp"
 
-                app:layout_constraintEnd_toStartOf="@+id/guideline_partial_loading_with_show_cache_90percent_vertical"
-                app:layout_constraintStart_toStartOf="@+id/guideline_partial_loading_with_show_cache_10percent_vertical"
-                app:layout_constraintTop_toBottomOf="@id/guideline_partial_loading_with_show_cache_50percent_horizontal"
+                app:layout_constraintEnd_toStartOf="@+id/guideline_partial_empty_list_with_show_cache_90percent_vertical"
+                app:layout_constraintStart_toStartOf="@+id/guideline_partial_empty_list_with_show_cache_10percent_vertical"
+                app:layout_constraintTop_toBottomOf="@id/guideline_partial_empty_list_with_show_cache_50percent_horizontal"
                 app:layout_constraintBottom_toBottomOf="parent"
         >
 
@@ -87,13 +85,13 @@
             >
 
 
-                <!-- Bezig met laden titel -->
+                <!-- Lege lijst titel -->
                 <TextView
-                        android:id="@+id/text_partial_loading"
+                        android:id="@+id/text_partial_empty_list"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
 
-                        android:text="@string/txt_loading"
+                        android:text="@string/txt_empty_list"
                         android:textSize="30sp"
                         android:textAlignment="center"
                         android:textColor="@color/colorPrimary"
@@ -103,17 +101,17 @@
                         app:layout_constraintEnd_toEndOf="parent"
                 />
 
-                <!-- Bezig met laden uitleg -->
+                <!-- Lege lijst uitleg -->
                 <TextView
-                        android:id="@+id/text_partial_loading_why_it_takes_so_long"
+                        android:id="@+id/text_partial_empty_list_long"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
 
-                        android:text="@string/txt_loading_why_it_takes_so_long"
+                        android:text="@string/txt_empty_list_long"
                         android:textSize="16sp"
                         android:textAlignment="center"
 
-                        app:layout_constraintTop_toBottomOf="@+id/text_partial_loading"
+                        app:layout_constraintTop_toBottomOf="@+id/text_partial_empty_list"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
 
