--- a/CarMeets Android App/app/src/main/res/layout-w600dp/fragment_meetinglist.xml
+++ b/CarMeets Android App/app/src/main/res/layout-w600dp/fragment_meetinglist.xml
@@ -19,21 +19,30 @@
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.45"/>
 
-    <!-- de lijst -->
-    <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerview_meetinglist"
+    <!-- Swipe to refresh voor lijst -->
+    <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipe_refresh_meetinglist"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
-
-            tools:listitem="@layout/item_meeting_small"
-            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+            android:layout_height="0dp"
 
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guide_meetinglist_45percent_vertical"
+    >
 
-            android:layout_marginEnd="8dp"/>
+        <!-- de lijst -->
+        <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerview_meetinglist"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+
+                tools:listitem="@layout/item_meeting_small"
+                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+
+                android:layout_marginEnd="8dp"/>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <!-- visuele scheidingslijn -->
     <View
@@ -61,4 +70,5 @@
             app:layout_constraintStart_toStartOf="@+id/divider_meetinglist_45percent"
 
             android:layout_marginStart="8dp"/>
+
 </android.support.constraint.ConstraintLayout>
