--- a/CarMeets Android App/app/src/main/res/layout/fragment_meetinglist.xml
+++ b/CarMeets Android App/app/src/main/res/layout/fragment_meetinglist.xml
@@ -10,17 +10,26 @@
 
         android:orientation="vertical">
 
-    <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerview_meetinglist"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+    <!-- Swipe to refresh voor lijst -->
+    <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipe_refresh_meetinglist"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
 
-            tools:listitem="@layout/item_meeting_small"
-            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+    >
+        <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerview_meetinglist"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+
+                tools:listitem="@layout/item_meeting_small"
+                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+        />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </android.support.constraint.ConstraintLayout>
